修复：后台登录时系统配置解析 修复：Home模块模版配置解析 修改：评分插件的信息 新增：KindEditor开启图片空间功能

--- a/Application/Common/Builder/formbuilder.html
+++ b/Application/Common/Builder/formbuilder.html
@@ -223,7 +223,7 @@
                                         $(function(){
                                             KindEditor.ready(function(K){
                                                 kindeditor_{$k} = K.create('#kindeditor_{$k}', {
-                                                    allowFileManager : false,
+                                                    allowFileManager : true,
                                                     width: '100%',
                                                     height: '500px',
                                                     cssPath : [
@@ -504,7 +504,7 @@
                                                                             $(function(){
                                                                                 KindEditor.ready(function(K) {
                                                                                     kindeditor_{$tab_k} = K.create('.tab{$group_k} .kindeditor_{$tab_k}', {
-                                                                                        allowFileManager : false,
+                                                                                        allowFileManager : true,
                                                                                         width: '100%',
                                                                                         height: '500px',
                                                                                         cssPath : [
