修复：ListBuilder指定数据主键名称后列表ID为空问题 修复：模块里生成插件控制器访问地址时省略Home导致访问错误 完善：完善首页小屏幕设备显示样式

--- a/Application/Common/Builder/listbuilder.html
+++ b/Application/Common/Builder/listbuilder.html
@@ -40,7 +40,7 @@
                     <tbody>
                         <volist name="data_list" id="data">
                             <tr>
-                                <td><input class="ids" type="checkbox" value="{$data['id']}" name="ids[]"></td>
+                                <td><input class="ids" type="checkbox" value="{$data[$data_list_primary_key]}" name="ids[]"></td>
                                 <volist name="field_list" id="field">
                                     <td>{$data[$field['name']]}</td>
                                 </volist>
