修复：FormBuilder表单项配置 完善：论坛模版样式 修改：用户注册类型编号 修复：前台发表文档提示文档类型不能为空 完善：BootstrapExtend的样式 优化：文档类型字段编辑逻辑

--- a/Application/Common/Builder/formbuilder.html
+++ b/Application/Common/Builder/formbuilder.html
@@ -4,7 +4,7 @@
         .form .form-control.select,
         .form .form-control.textarea,
         .form .token-input-list,
-        .form .list-group {
+        .form>.list-group {
             width: 50% !important;
             max-width: 600px;
         }
